Added a pause feature, visual message, interval manipulation
Users can now pause the game, select the interval for drinking, and are
now alerted visually with a "drink now!" message when it's time to
drink.

--- a/index.html
+++ b/index.html
@@ -5,16 +5,24 @@ PowerHour
 </title>
 <!-- Include MooTools and the PourHour logic (do.js) -->
 <script type="text/javascript" src="res/mootools.js"></script>
+<script type="text/javascript" src="res/mootools-more.js"></script>
 <script type="text/javascript" src="res/do.js"></script>
 <!-- Also, the stylesheet and my favorite Google fonts -->
 <link rel="stylesheet" type="text/css" href="res/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Knewave|Playball|Lora|Raleway:100|Raleway+Dots' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<center>
+<div id="overlay">Take A Shot!</div>
+<h1>Wine Power Hour!</h1>
 Countdown: <div id="timer">0</div>
 Shots: <div id="shots">0</div>
 Bottles: <div id="bottles">0</div>
 Ml: <div id="ml">0</div>
 Oz: <div id="oz">0</div>
+<br>
+<div id="status">0</div>
+<div id="interval">0</div>
+</center>
 </body>
 </html>
