Integrated YouTube support. Plays a default playlist.
Adds an embedded chromeless YouTube player to play a playlist of music.
Automatically advances the song when the timer times out.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ PowerHour
 <script type="text/javascript" src="res/mootools.js"></script>
 <script type="text/javascript" src="res/mootools-more.js"></script>
 <script type="text/javascript" src="res/do.js"></script>
+<script type="text/javascript" src="res/swfobject.js"></script>    
 <!-- Also, the stylesheet and my favorite Google fonts -->
 <link rel="stylesheet" type="text/css" href="res/style.css" />
 <link href='http://fonts.googleapis.com/css?family=Knewave|Playball|Lora|Raleway:100|Raleway+Dots' rel='stylesheet' type='text/css'>
@@ -23,6 +24,12 @@ Oz: <div id="oz">0</div>
 <br>
 <div id="status">0</div>
 <div id="interval">0</div>
+<hr>
+
+  <div id="player">
+    You need Flash player 8+ and JavaScript enabled to view this video.
+  </div>
+  
 </center>
 </body>
 </html>
