Added means to change shot size, bottle size, # of players
Also added more controls for the YouTube player. IE enable/disable,
mute, and a way to change the playlist.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@ PowerHour
 <center>
 <div id="overlay">Take A Shot!</div>
 <h1>Wine Power Hour!</h1>
+
+<div id="config">
+<div id="size" class="button">Shot Size</div> |
+<div id="wine" class="button">Bottle Size</div> |
+<div id="players" class="button">Players</div> 
+</div>
+
 Countdown: <div id="timer">0</div>
 Shots: <div id="shots">0</div>
 Bottles: <div id="bottles">0</div>
@@ -24,12 +31,18 @@ Oz: <div id="oz">0</div>
 <br>
 <div id="status">0</div>
 <div id="interval">0</div>
-<hr>
 
-  <div id="player">
-    You need Flash player 8+ and JavaScript enabled to view this video.
-  </div>
-  
+<div id="bar">
+<div id="hide">enable/disable</div> |
+<div id="mute">mute</div> |
+<div id="plid">playlist</div>
+</div>
+<div id="player">
+You need Flash player 8+ and JavaScript enabled to view this video.
+</div>
+
+
+
 </center>
 </body>
 </html>
