Changed enable/disable to show/hide
It makes it so the musics keep playing instead of stopping.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ PowerHour
 <div id="interval">0</div>
 
 <div id="bar">
-<div id="hide">enable/disable</div> |
+<div id="hide">show/hide</div> |
 <div id="mute">mute</div> |
 <div id="plid">playlist</div>
 </div>
